update leaveServices